Add handshake test client + client UX docs

--- a/docs/protocol/v0.1.md
+++ b/docs/protocol/v0.1.md
@@ -40,20 +40,48 @@ Encryption:
 
 ## Message framing (draft)
 
-For v0.1, choose one:
-- length-prefixed binary frames (recommended)
-- newline-delimited JSON for early prototyping only
+For v0.1, OWP uses **length-prefixed JSON frames**:
 
-All messages must include:
-- `protocol_version`
-- `message_type`
-- `request_id` (for request/response patterns)
+- Frame header: `u32` big-endian payload length (bytes)
+- Frame payload: UTF-8 JSON bytes
+- Max frame length: 4 MiB (implementation limit)
+
+All messages include:
+- `type` (snake_case)
+- `protocol_version` (string, currently `"0.1"`)
+- `request_id` (UUID string)
 
 ## Core message types (minimum)
 
 Handshake:
-- `HELLO` → client announces version, client capabilities, requested world id
-- `WELCOME` → server confirms version, world id, token mint, capabilities, optional MOTD
+- `hello` → client announces version and (optionally) requested `world_id`
+- `welcome` → server confirms version, world id, token mint, capabilities, optional MOTD
+
+Example `hello` payload:
+
+```json
+{
+  "type": "hello",
+  "protocol_version": "0.1",
+  "request_id": "00000000-0000-0000-0000-000000000000",
+  "world_id": "00000000-0000-0000-0000-000000000000",
+  "client_name": "owp-client-cli"
+}
+```
+
+Example `welcome` payload:
+
+```json
+{
+  "type": "welcome",
+  "protocol_version": "0.1",
+  "request_id": "00000000-0000-0000-0000-000000000000",
+  "world_id": "00000000-0000-0000-0000-000000000000",
+  "token_mint": "So11111111111111111111111111111111111111112",
+  "motd": "Welcome to OWP",
+  "capabilities": ["handshake"]
+}
+```
 
 World metadata:
 - `WORLD_MANIFEST` → server sends manifest hash + metadata pointers
@@ -84,4 +112,3 @@ Versioned JSON manifest stored in the world workspace, e.g. `manifest/world.mani
 
 - Clients and servers must reject unknown major versions.
 - Minor versions may add optional fields; unknown fields must be ignored.
-
